[package]
name = "ummo_market"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "ummo_market"

[features]
default = []
alloc = ["quasar-lang/alloc"]
debug = ["quasar-lang/debug"]

[dependencies]
quasar-lang = "0.0.0"
percolator = { path = "../../crates/percolator-kernel" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
